--- a/2.6/Dockerfile
+++ b/2.6/Dockerfile
@@ -3,6 +3,9 @@ FROM mongo:2.6
 # Point-in-time backup script with backup rotation
 COPY backup.sh /usr/local/bin/
 
+# Extend mountable directory
+VOLUME ["/data"]
+
 # Entrypoint command
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/*
